--- a/custom.css
+++ b/custom.css
@@ -1,13 +1,13 @@
 /* Active (selected) sidebar item */
   .skin-blue .sidebar-menu > li.active > a {
-    background-color: #7a67ee !important;
+    background-color: #9B4393 !important;
       color: #ffffff !important;
       font-weight: bold;
   }
 
 /* Hover effect for inactive items */
   .skin-blue .sidebar-menu > li > a:hover {
-    background-color: #9a88f2 !important;
+    background-color: #9B4393 !important;
       color: #ffffff !important;
   }
 
